# agent-status-swiftbar

./: .gitignore  LICENSE  OVERVIEW.md  README.md  install.sh  pyproject.toml  uninstall.sh
hook/: agent-status-hook.py  claude-swiftbar-hook.py
lib/: agentstatus.py  claudebar.py
plugin/: agent-status.py  agent-status.sh  claude-status.2s.sh  claude-status.py  claude-status.sh  swiftbar-config-full.json  swiftbar-config.json  toggle.py
scripts/: build_app_logos.py  build_composites.py  install_claude_hooks.py  install_codex_hooks.py  install_settings.py  uninstall_claude_hooks.py  uninstall_codex_hooks.py  uninstall_settings.py
tests/: test_agentstatus.py  test_claudebar.py  test_install_claude_hooks.py  test_install_codex_hooks.py  test_install_settings.py  test_notifications.py
