[project]
name = "agent-status-swiftbar"
version = "0.6.0"
description = "SwiftBar plugin: macOS menu-bar status light for Claude Code and Codex sessions."
requires-python = ">=3.10"
license = { file = "LICENSE" }
# Runtime deps: none — all production code uses the stdlib only, so the
# deployed scripts run fine under /usr/bin/python3.
dependencies = []

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyobjc-framework-cocoa>=12.1",
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]
addopts = "-q"
